Add BitBar Covid19 plugin

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -170,7 +170,8 @@
         "Druhin13/corona",
         "shaunsaker/covid-19-south-africa-app",
         "hissain/CoronaTracker",
-        "WorldHealthOrganization/app"
+        "WorldHealthOrganization/app",
+        "expelledboy/bitbar-covid"
       ]
     },
     {
