--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -81,7 +81,8 @@
         "github/covid19-dashboard",
         "sebaxtian/colombia_covid_19_pipe",
         "UniversalDataTool/coronavirus-mask-image-dataset",
-        "cityxdev/covid19ByCountry"
+        "cityxdev/covid19ByCountry",
+        "turicas/covid19-br"
       ]
     },
     {
