--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -124,7 +124,8 @@
         "opencovid19-fr/dashboard",
         "bustbyte/coronastatus",
         "reach4help/reach4help",
-        "Polunom/covid-inc"
+        "Polunom/covid-inc",
+        "yammadev/col-covid-19"
       ]
     },
     {
