Added Wear Mask

--- a/data/applications.json
+++ b/data/applications.json
@@ -5,6 +5,11 @@
       "category": "Web Apps",
       "list": [
         {
+          "title": "WearMask",
+          "url": "http://mahendran-narayanan.github.io/",
+          "description": "A web app to create awareness for people to wear mask due to covid-19. Mask chases when you move."
+        },
+        {
           "title": "coronatracker.com",
           "url": "https://www.coronatracker.com",
           "description": "CORONATRACKER.com is a community-based project powered by over 460 volunteers from across the globe, ranging from data scientists, medical professionals, UI/UX designers, fullstack developers, to the general public."
