--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -33,7 +33,8 @@
         "covid19india/api",
         "yedhink/covid19-kerala-api",
         "slotix/COVID-19",
-        "cityxdev/covid19GoogleMobilityJSON"
+        "cityxdev/covid19GoogleMobilityJSON",
+        "puf17640/awesome-novelcovid"
       ]
     },
     {
