--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -84,7 +84,8 @@
         "cityxdev/covid19ByCountry",
         "turicas/covid19-br",
         "xhlulu/covid-qa",
-        "ActiveConclusion/COVID19_mobility"
+        "ActiveConclusion/COVID19_mobility",
+        "defeatcovid19/defeatcovid19-project"
       ]
     },
     {
