Add CLI app Corona

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -202,7 +202,8 @@
         "MouadBH/coronapy-cli",
         "soroushchehresa/cli-corona",
         "asprazz/covid19-cli",
-        "aayush-jaiswal/covid-in"
+        "aayush-jaiswal/covid-in",
+        "aethe/corona"
       ]
     },
     {
