--- a/data/applications.json
+++ b/data/applications.json
@@ -431,8 +431,8 @@
         },
         {
           "title": "rkicasesdashboard",
-          "url": "https://rkicasesapi.web.app/",
-          "description": "(offline-capable) web application to display COVID-19 case numbers in Germany"
+          "url": "https://rkicasesapi.web.app",
+          "description": "(offline-capable) web application to display COVID-19 case numbers in Germany."
         }
       ]
     },
