--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -178,6 +178,7 @@
         "hissain/CoronaTracker",
         "WorldHealthOrganization/app",
         "expelledboy/bitbar-covid"
+        "amitay87/corona_touch_tracking"
       ]
     },
     {
