--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -161,7 +161,7 @@
         "nthopinion/covid19",
         "mayukh18/covidexplore",
         "nutboltu/australia-covid19",
-        "Spiderpig86/sea-to-go",
+        "Spiderpig86/to-go",
         "nploi/corona_tracker",
         "helloworldkr/Bluetooth-ble-beamer-and-scanner-for-tracing-corona-virus-infected-individual",
         "boogheta/coronavirus-countries",
