Adding Yahoo Knowledge Graph Projects

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -34,6 +34,7 @@
         "yedhink/covid19-kerala-api",
         "slotix/COVID-19",
         "cityxdev/covid19GoogleMobilityJSON"
+        "yahoo/covid-19-api"
       ]
     },
     {
@@ -86,6 +87,7 @@
         "xhlulu/covid-qa",
         "ActiveConclusion/COVID19_mobility",
         "defeatcovid19/defeatcovid19-project"
+        "yahoo/covid-19-data"
       ]
     },
     {
@@ -128,6 +130,7 @@
         "reach4help/reach4help",
         "Polunom/covid-inc",
         "yammadev/col-covid-19"
+        "yahoo/covid-19-dashboard"
       ]
     },
     {
