--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -33,7 +33,7 @@
         "covid19india/api",
         "yedhink/covid19-kerala-api",
         "slotix/COVID-19",
-        "cityxdev/covid19GoogleMobilityJSON"
+        "cityxdev/covid19GoogleMobilityJSON",
         "yahoo/covid-19-api"
       ]
     },
@@ -86,7 +86,7 @@
         "turicas/covid19-br",
         "xhlulu/covid-qa",
         "ActiveConclusion/COVID19_mobility",
-        "defeatcovid19/defeatcovid19-project"
+        "defeatcovid19/defeatcovid19-project",
         "yahoo/covid-19-data"
       ]
     },
@@ -130,7 +130,6 @@
         "reach4help/reach4help",
         "Polunom/covid-inc",
         "yammadev/col-covid-19"
-        "yahoo/covid-19-dashboard"
       ]
     },
     {
@@ -182,7 +181,8 @@
         "WorldHealthOrganization/app",
         "expelledboy/bitbar-covid",
         "amitay87/corona_touch_tracking",
-        "dstotijn/ct-diag-server"
+        "dstotijn/ct-diag-server",
+        "yahoo/covid-19-dashboard"
       ]
     },
     {
