--- a/data/interactive-applications.json
+++ b/data/interactive-applications.json
@@ -68,7 +68,7 @@
     },
     {
       "title": "Yahoo Knowledge Graph COVID-19 Dashboard",
-      "url": "https://yahoo.github.io/covid-19-dashboard/",
+      "url": "https://yahoo.github.io/covid-19-dashboard",
       "description": "Dynamic COVID-19 dashboard using 100% government and public health authority sources."
     }
   ]
