--- a/data/applications.json
+++ b/data/applications.json
@@ -433,6 +433,11 @@
           "title": "rkicasesdashboard",
           "url": "https://rkicasesapi.web.app",
           "description": "(offline-capable) web application to display COVID-19 case numbers in Germany."
+        },
+        {
+          "title": "Covidstat.info",
+          "url": "https://covidstat.info",
+          "description": "Beautiful interactive dashboard to know number of COVID19 case across the world, also country-wise data. Data updates every 3 mins from multiple sources"
         }
       ]
     },
