--- a/data/applications.json
+++ b/data/applications.json
@@ -231,7 +231,7 @@
         },
         {
           "title": "COVID-19 Tracker Ita",
-          "url": "https://polilluminato.github.io/covid19trackerita/",
+          "url": "https://polilluminato.github.io/covid19trackerita",
           "description": "Charts with the data on the emergency of Codiv-19 in Italy with data provided by the Department of Civil Protection."
         },
         {
