Remove additional slash

--- a/data/applications.json
+++ b/data/applications.json
@@ -196,7 +196,7 @@
         },
         {
           "title":"California Coronavirus",
-          "url":"https://californiacoronavirus.org/",
+          "url":"https://californiacoronavirus.org",
           "description":"California Coronavirus Map."
         },
         {
