Remove a additional slash

--- a/data/applications.json
+++ b/data/applications.json
@@ -176,7 +176,7 @@
         },
         {
           "title":"Official Covid-19 Philippines",
-          "url":"https://ncovtracker.doh.gov.ph/",
+          "url":"https://ncovtracker.doh.gov.ph",
           "description":"Official government website for tracking covid-19 for the Philippines."
         },
         {
