--- a/data/applications.json
+++ b/data/applications.json
@@ -186,7 +186,7 @@
         },
         {
           "title":"Covid-19 in Morocco",
-          "url":"http://covidmaroc.ma/",
+          "url":"http://covidmaroc.ma",
           "description":"Morocco COVID-19 Coronavirus Tracker."
         },
         {
