Add BNext-IQT/antivirals to open-source-projects/Learning.

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -113,7 +113,8 @@
       "category":"Learning",
       "repositories":[
         "mattroconnor/deep_learning_coronavirus_cure",
-        "jbesomi/Korono"
+        "jbesomi/Korono",
+        "BNext-IQT/antivirals"
       ]
     },
     {
