--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -35,7 +35,8 @@
         "slotix/COVID-19",
         "cityxdev/covid19GoogleMobilityJSON",
         "yahoo/covid-19-api",
-        "COVID19-SARS-CoV-2/web-covid-api"
+        "COVID19-SARS-CoV-2/web-covid-api",
+        "mahabub81/covid-19-api"
       ]
     },
     {
