added elComrades/coronaindia repo
added elComrades/coronaindia open-source repo, a COVID19 dashboard, to "Statistics and Datasets" list

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -88,7 +88,8 @@
         "xhlulu/covid-qa",
         "ActiveConclusion/COVID19_mobility",
         "defeatcovid19/defeatcovid19-project",
-        "yahoo/covid-19-data"
+        "yahoo/covid-19-data",
+        "elComrades/coronaindia"
       ]
     },
     {
