--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -89,7 +89,8 @@
         "xhlulu/covid-qa",
         "ActiveConclusion/COVID19_mobility",
         "defeatcovid19/defeatcovid19-project",
-        "yahoo/covid-19-data"
+        "yahoo/covid-19-data",
+        "ml-workgroup/covid-19-image-repository"
       ]
     },
     {
