--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -109,7 +109,8 @@
         "WARMTeam/CoVid19",
         "ImperialCollegeLondon/covid19model",
         "microprediction/pandemic",
-        "p-j-r/covid-19"
+        "p-j-r/covid-19",
+        "Elzawawy/covid-case-estimator"
       ]
     },
     {
