--- a/data/applications.json
+++ b/data/applications.json
@@ -459,6 +459,11 @@
           "url":"https://pandemic19.herokuapp.com",
           "description":"Shows statistics, graphs and a heat map, as well as news about coronavirus from different media. Also allows registering and managing new cases of infected people, offering a real-time notification service to those users who are nearby."
         }
+        {
+          "title":"mkvats.science/COVID-19",
+          "url":"https://mkvats.science/COVID-19",
+          "description":"डैशबोर्ड तथा स्टैट्स ट्रैकर - भारतीय राज्यों एवं विश्व के देशों के आंकड़ों का विश्लेषण (मैप, डेटा टेबल, टाइमलाइन, रिपोर्ट्स एवं चार्ट्स के माध्यम से)"
+        }
       ]
     },
     {
