Add Nu-AI/Livid-About-COVID to the Models Open Source projects.

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -111,7 +111,8 @@
         "ImperialCollegeLondon/covid19model",
         "microprediction/pandemic",
         "p-j-r/covid-19",
-        "Elzawawy/covid-case-estimator"
+        "Elzawawy/covid-case-estimator",
+        "Nu-AI/Livid-About-COVID"
       ]
     },
     {
