Add Yu-Group/covid19-severity-prediction to Models Open Source projects.

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -112,7 +112,8 @@
         "microprediction/pandemic",
         "p-j-r/covid-19",
         "Elzawawy/covid-case-estimator",
-        "Nu-AI/Livid-About-COVID"
+        "Nu-AI/Livid-About-COVID",
+        "Yu-Group/covid19-severity-prediction"
       ]
     },
     {
