--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -219,7 +219,8 @@
         "soroushchehresa/cli-corona",
         "asprazz/covid19-cli",
         "aayush-jaiswal/covid-in",
-        "aethe/corona"
+        "aethe/corona",
+        "OpenGene/fastv"
       ]
     },
     {
