Add trekhleb/covid-19 Dashboard to Datasets And Stats.

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -92,7 +92,8 @@
         "yahoo/covid-19-data",
         "elComrades/coronaindia",
         "ml-workgroup/covid-19-image-repository",
-        "owid/covid-19-data"
+        "owid/covid-19-data",
+        "trekhleb/covid-19"
       ]
     },
     {
