--- a/data/interactive-applications.json
+++ b/data/interactive-applications.json
@@ -70,6 +70,11 @@
       "title":"Yahoo Knowledge Graph COVID-19 Dashboard",
       "url":"https://yahoo.github.io/covid-19-dashboard",
       "description":"Dynamic COVID-19 dashboard using 100% government and public health authority sources."
+    },
+    {
+      "title":"Japan's New Coronavirus Infection Bulletin",
+      "url":"https://covid-2019.live/",
+      "description":"Interactive dashboard for real-time recording of COVID-19 outbreak in Japan."
     }
   ]
 }
