--- a/data/interactive-applications.json
+++ b/data/interactive-applications.json
@@ -73,7 +73,7 @@
     },
     {
       "title":"The U.S. COVID-19 Testing Gap",
-      "url":"https://testing.predictcovid.com/",
+      "url":"https://testing.predictcovid.com",
       "description":"This is a website visualizing each state’s testing relative to their population."
     }
   ]
