Add covid19monitor-india to the list of web-apps

--- a/data/applications.json
+++ b/data/applications.json
@@ -468,6 +468,11 @@
           "title":"SaveDemic",
           "url":"https://savedemic.com",
           "description":"View epidemic data graphically and with great quality, also see predictions for the future and export the data."
+        },
+        {
+          "title":"Covid19Monitor-India",
+          "url":"https://covid19monitor-india.now.sh",
+          "description":"A map-based, interactive web application dashboard that visualizes the spread of Covid19 in India and across the world."
         }
       ]
     },
