Add COVID-Net Open Source Initiative to Models.

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -114,7 +114,8 @@
         "p-j-r/covid-19",
         "Elzawawy/covid-case-estimator",
         "Nu-AI/Livid-About-COVID",
-        "Yu-Group/covid19-severity-prediction"
+        "Yu-Group/covid19-severity-prediction",
+        "lindawangg/COVID-Net"
       ]
     },
     {
