Add MakAir: open-source Covid-19 ARDS ventilator Project.

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -229,7 +229,8 @@
       "category":"Hardware",
       "repositories":[
         "jcl5m1/ventilator",
-        "ProtofyTeam/OxyGEN"
+        "ProtofyTeam/OxyGEN",
+        "makers-for-life/makair"
       ]
     },
     {
