--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -36,7 +36,8 @@
         "cityxdev/covid19GoogleMobilityJSON",
         "yahoo/covid-19-api",
         "COVID19-SARS-CoV-2/web-covid-api",
-        "mahabub81/covid-19-api"
+        "mahabub81/covid-19-api",
+        "ryux00/coronavirus_api"
       ]
     },
     {
