--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -96,7 +96,8 @@
         "owid/covid-19-data",
         "trekhleb/covid-19",
         "covidatlas/coronadatascraper",
-        "sl4wa/covid-19"
+        "sl4wa/covid-19",
+        "v7labs/covid-19-xray-dataset"
       ]
     },
     {
