--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -228,7 +228,8 @@
         "asprazz/covid19-cli",
         "aayush-jaiswal/covid-in",
         "aethe/corona",
-        "OpenGene/fastv"
+        "OpenGene/fastv",
+        "mixon00/cov19-cli"
       ]
     },
     {
