--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -202,7 +202,7 @@
         "GabrielTavernini/Covid19Stats",
         "ravindraten/CoronaWorldStatsBot",
         "google/exposure-notifications-android",
-        "BrianRuizy/covid19-dashboard",
+        "BrianRuizy/covid19-dashboard"
       ]
     },
     {
