Add coronavirus-us-api for US county-level stats

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -37,7 +37,8 @@
         "yahoo/covid-19-api",
         "COVID19-SARS-CoV-2/web-covid-api",
         "mahabub81/covid-19-api",
-        "ryux00/coronavirus_api"
+        "ryux00/coronavirus_api",
+        "Spiderpig86/coronavirus-us-api"
       ]
     },
     {
