feat: Add corona-warn-app

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -38,7 +38,8 @@
         "COVID19-SARS-CoV-2/web-covid-api",
         "mahabub81/covid-19-api",
         "ryux00/coronavirus_api",
-        "Spiderpig86/coronavirus-us-api"
+        "Spiderpig86/coronavirus-us-api",
+        "ffflorian/api-clients"
       ]
     },
     {
