feat: Add exposure-keys

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -215,7 +215,8 @@
         "pdtyreus/coronavirus-ds",
         "eebrown/data2019nCoV",
         "benhur07b/covid19-load-qgis",
-        "ghaake/stay-home-snackbar"
+        "ghaake/stay-home-snackbar",
+        "ffflorian/exposure-keys"
       ]
     },
     {
