Adds covid package
- covid package has so far 77000 downloads (I think many of the application if your awesome list are using this package)
- Documentation is [here](https://ahmednafies.github.io/covid/)
- Medium [article](https://medium.com/@langtv/how-to-write-a-program-that-uses-the-covid-package-to-provide-information-about-wuhan-pneumonia-c566d99625dd) written about my package.

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -217,7 +217,8 @@
         "eebrown/data2019nCoV",
         "benhur07b/covid19-load-qgis",
         "ghaake/stay-home-snackbar",
-        "ffflorian/exposure-keys"
+        "ffflorian/exposure-keys",
+        "ahmednafies/covid"
       ]
     },
     {
