--- a/data/applications.json
+++ b/data/applications.json
@@ -446,7 +446,7 @@
         },
         {
           "title":"Rt-INDIA",
-          "url":"https://www.rt-india.live",
+          "url":"rt-india.live",
           "description":"R-naught stats for India and its states."
         },
         {
