--- a/data/applications.json
+++ b/data/applications.json
@@ -446,7 +446,7 @@
         },
         {
           "title":"Rt-INDIA",
-          "url":"https://rt-india.live",
+          "url":"http://rt-india.live",
           "description":"R-naught stats for India and its states."
         },
         {
