--- a/data/applications.json
+++ b/data/applications.json
@@ -573,6 +573,11 @@
           "title":"covid19-dash",
           "url":"https://covidnineteendash.herokuapp.com/world",
           "description":"A fully updated, interactive dashboard to track the corona virus cases made using the dash python framework. Contains diferent page and layouts for India and World and a good structure for a multi-page dash application."
+        },
+                {
+          "title":"Covid19 - Data Visualization RS",
+          "url":"https://github.com/Gabriellavoura/covidAnalytics",
+          "description":"Open source data visualization platform, to make information about covid-19 easily available in the state of Rio Grande do Sul - Brazil"
         }
       ]
     }
