--- a/data/applications.json
+++ b/data/applications.json
@@ -496,8 +496,8 @@
         },
         {
           "title":"Co-ronaBD.info",
-          "url":"https://www.co-ronabd.info/",
-          "description":"Interactive Dashboard for Tracking Covid-19 Situatuion in Bangladesh"
+          "url":"https://www.co-ronabd.info",
+          "description":"Interactive Dashboard for Tracking Covid-19 Situatuion in Bangladesh."
         }
       ]
     },
