--- a/data/applications.json
+++ b/data/applications.json
@@ -495,8 +495,8 @@
           "description":"Open source Web app, about covid-19 in the state of Rio Grande do Sul - Brazil."
         },
         {
-          "title":"rnnh.shinyapps.io/covidgraphics/",
-          "url":"https://rnnh.shinyapps.io/covidgraphics/",
+          "title":"COVID-19 graph controls",
+          "url":"https://rnnh.shinyapps.io/covidgraphics",
           "description":"A web application that creates graphs using international Covid-19 data, which can also be run locally."
         }
       ]
