--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -205,8 +205,9 @@
         "ravindraten/CoronaWorldStatsBot",
         "google/exposure-notifications-android",
         "BrianRuizy/covid19-dashboard",
-        "aerogear/OpenVolunteerPlatform"
-      ]
+        "aerogear/OpenVolunteerPlatform",
+        "MM-coder/coronavirus-wallpaper"
+      ]"
     },
     {
       "category":"Packages and Scripts",
