Added COVID-19 Dashboard to applications

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -206,7 +206,8 @@
         "google/exposure-notifications-android",
         "BrianRuizy/covid19-dashboard",
         "aerogear/OpenVolunteerPlatform",
-        "MM-coder/coronavirus-wallpaper"
+        "MM-coder/coronavirus-wallpaper",
+        "federico-dondi/COVID-19-dashboard"
       ]
     },
     {
