--- a/data/applications.json
+++ b/data/applications.json
@@ -508,6 +508,11 @@
           "title":"COVID-19 Dashboard",
           "url":"https://federico-dondi.github.io/COVID-19-dashboard",
           "description":"Coronavirus (as COVID-19) web-application to show contagions, statistics and more. Made with Vue and Vuetify. Written in TypeScript."
+        },
+        {
+          "title":"covid-dash",
+          "url":"https://hauchongtang.github.io/covid-dash/#/",
+          "description":"A web app created with chartjs and material-ui to bring covid data to the masses"
         }
       ]
     },
