--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -221,7 +221,8 @@
         "benhur07b/covid19-load-qgis",
         "ghaake/stay-home-snackbar",
         "ffflorian/exposure-keys",
-        "ahmednafies/covid"
+        "ahmednafies/covid",
+        "Coriou/easy-covid-data"
       ]
     },
     {
