--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -100,7 +100,8 @@
         "covidatlas/coronadatascraper",
         "sl4wa/covid-19",
         "v7labs/covid-19-xray-dataset",
-        "seandavi/sars2pack"
+        "seandavi/sars2pack",
+        "akshayajeevan/covid19-us-states"
       ]
     },
     {
