--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -39,7 +39,8 @@
         "mahabub81/covid-19-api",
         "ryux00/coronavirus_api",
         "Spiderpig86/coronavirus-us-api",
-        "ffflorian/api-clients"
+        "ffflorian/api-clients",
+        "Covid-19-Response-Greece/covid19-greece-api"
       ]
     },
     {
