--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -210,7 +210,8 @@
         "BrianRuizy/covid19-dashboard",
         "aerogear/OpenVolunteerPlatform",
         "MM-coder/coronavirus-wallpaper",
-        "federico-dondi/COVID-19-dashboard"
+        "federico-dondi/COVID-19-dashboard",
+        "Jxyme/covid-19-discord-custom-status"
       ]
     },
     {
