--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -212,7 +212,7 @@
         "MM-coder/coronavirus-wallpaper",
         "federico-dondi/COVID-19-dashboard",
         "Jxyme/covid-19-discord-custom-status",
-        "stritti/covid-ampel-widget",    
+        "stritti/covid-ampel-widget"
       ]
     },
     {
