--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -40,7 +40,8 @@
         "ryux00/coronavirus_api",
         "Spiderpig86/coronavirus-us-api",
         "ffflorian/api-clients",
-        "Covid-19-Response-Greece/covid19-greece-api"
+        "Covid-19-Response-Greece/covid19-greece-api",
+        "disease-sh/API"
       ]
     },
     {
