--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -41,7 +41,8 @@
         "Spiderpig86/coronavirus-us-api",
         "ffflorian/api-clients",
         "Covid-19-Response-Greece/covid19-greece-api",
-        "disease-sh/API"
+        "disease-sh/API",
+        "https://github.com/M-Media-Group/Covid-19-API"
       ]
     },
     {
