--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -42,7 +42,7 @@
         "ffflorian/api-clients",
         "Covid-19-Response-Greece/covid19-greece-api",
         "disease-sh/API",
-        "https://github.com/M-Media-Group/Covid-19-API"
+        "M-Media-Group/Covid-19-API"
       ]
     },
     {
