Added Coronavirus-COVID-19-Watch WP plugin

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -230,7 +230,8 @@
         "ghaake/stay-home-snackbar",
         "ffflorian/exposure-keys",
         "ahmednafies/covid",
-        "Coriou/easy-covid-data"
+        "Coriou/easy-covid-data",
+        "M-Media-Group/Coronavirus-COVID-19-Watch"
       ]
     },
     {
