Add Community-driven delivery app repository link

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -215,7 +215,8 @@
         "federico-dondi/COVID-19-dashboard",
         "Jxyme/covid-19-discord-custom-status",
         "Coriou/easy-attestation",
-        "stritti/covid-ampel-widget"
+        "stritti/covid-ampel-widget",
+        "booleanhunter-tech-blog/kartpool-complete"
       ]
     },
     {
