--- a/data/applications.json
+++ b/data/applications.json
@@ -608,6 +608,11 @@
           "title":"covid19-dash",
           "url":"https://covidnineteendash.herokuapp.com/world",
           "description":"A fully updated, interactive dashboard to track the corona virus cases made using the dash python framework. Contains diferent page and layouts for India and World and a good structure for a multi-page dash application."
+        },
+        {
+          "title":"wildgrube.com - Outbreak",
+          "url":"https://wildgrube.com/outbreak",
+          "description":"Visualization of the Johns Hopkins data on the Covid19 pandemic build on SteelPHP, Javascript, React and d3."
         }
       ]
     }
