Added turkey's coronavirus dataset and dashboard

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -105,7 +105,8 @@
         "v7labs/covid-19-xray-dataset",
         "seandavi/sars2pack",
         "akshayajeevan/covid19-us-states",
-        "newaaa41/COVID19-Dataset"
+        "newaaa41/COVID19-Dataset",
+        "ozanerturk/covid19-turkey-api"
       ]
     },
     {
