--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -128,7 +128,8 @@
         "Elzawawy/covid-case-estimator",
         "Nu-AI/Livid-About-COVID",
         "Yu-Group/covid19-severity-prediction",
-        "lindawangg/COVID-Net"
+        "lindawangg/COVID-Net",
+        "mmahdigh/covid-risk"
       ]
     },
     {
