--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -106,7 +106,8 @@
         "seandavi/sars2pack",
         "akshayajeevan/covid19-us-states",
         "newaaa41/COVID19-Dataset",
-        "ozanerturk/covid19-turkey-api"
+        "ozanerturk/covid19-turkey-api",
+        "pranavmishra90/COVID-19"
       ]
     },
     {
